Fix blurry images for gatsby-remark-images

--- a/src/assets/styles/_trumps.overrides.scss
+++ b/src/assets/styles/_trumps.overrides.scss
@@ -1,3 +1,7 @@
 /*
- * Override styles from third party libraris
+ * Override styles from third party libraries
  */
+
+.gatsby-resp-image-image {
+  box-shadow: none !important;
+}
